--- a/static/authorization/css/auth.css
+++ b/static/authorization/css/auth.css
@@ -5,7 +5,7 @@ body{
     text-align: center;
 }
 img{
-    margin: 20px;
-    width: 10px;
+    margin-top: 50px;
+    width: 100px;
     height: auto;
 }
