--- a/templates/authorization/registration.html
+++ b/templates/authorization/registration.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="{% static authorization/auth/css.auth.css %}">
 </head>
 <body>
+<img src="{% static 'image/ros.png' %}">
 <h1>Регистрация</h1>
+
 </body>
 </html>
