--- a/templates/chats/chat.html
+++ b/templates/chats/chat.html
@@ -5,14 +5,15 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="chats/"
+    <link rel="stylesheet" href="{%static 'chats/chat-left.css' %}">
+    <link rel="stylesheet" href="{%static 'chats/chat-right.css' %}">
 </head>
 <body>
 <div class="block-left">
-
+    <link rel="stylesheet" href="{%static 'chats/chat-left.css' %}">
 </div>
 <div class="block-right">
-
+    <link rel="stylesheet" href="{%static 'chats/chat-right.css' %}">
 </div>
 
 </body>
