--- a/static/chats/css/chat-block.css
+++ b/static/chats/css/chat-block.css
@@ -26,23 +26,20 @@ position: relative;
   display: inline-block;
   width: 100%;
   height: 100px;
-  border: 1px solid #ccc;
   }
 .send_form{
 position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(100% - 20px);
-   vertical-align: top;
-   border: 1px solid #ccc;
-  overflow-y: scroll;*/ /* Скрываем переполнение */
+  height: calc(100% - 23px);
+  resize: none;
+  overflow-y: scroll; /* Скрываем переполнение */
   }
 .button{
 position: relative;
   display: inline-block;
   width: 100%;
   height: 20px;
-  border: 1px solid #ccc;
   }
 
 /* sidebar start*/
@@ -50,16 +47,21 @@ position: relative;
    display: inline-block;
    width: 20%;
    height: 100%;
-   vertical-align: top;
-   border: 1px solid #ccc;
    }
 /* sidebar end*/
 /* sidebar start*/
+.create {
+   display: inline-block;
+   width: 100%;
+   height: 20px;
+   }
 .users {
    display: inline-block;
    width: 100%;
-   height: calc(100% - 20px);
+   height: calc(100% - 40px);
    overflow-y: scroll;
+   vertical-align: top;
+   border: 1px solid #ccc;
    }
 /* sidebar end*/
 /* sidebar start*/
@@ -77,7 +79,7 @@ position: relative;
     background-color: #bdbdbd;
     border-radius: 10px;
     padding: 5px;
-    margin: 0px 0px;
+    margin: 10px 0px;
 }
 .chat_user img {
     float: left;
@@ -127,4 +129,38 @@ position: relative;
 
 .p {
  word-wrap: break-word;
+}
+
+
+body {
+    font-family: Times New Roman, Times, sans-serif;
+}
+
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.hidden {
+    display: none;
+}
+
+.close {
+    cursor: pointer;
+    float: right;
 }
