--- a/static/chats/css/chat-block.css
+++ b/static/chats/css/chat-block.css
@@ -63,6 +63,13 @@ position: relative;
    vertical-align: top;
    border: 1px solid #ccc;
    }
+.modal-content {
+   display: inline-block;
+   width: 100%;
+   height: calc(100% - 40px);
+   vertical-align: top;
+   border: 1px solid #ccc;
+   }
 /* sidebar end*/
 /* sidebar start*/
 .exit {
@@ -131,36 +138,14 @@ position: relative;
  word-wrap: break-word;
 }
 
-
 body {
     font-family: Times New Roman, Times, sans-serif;
 }
 
-
-.modal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    width: 300px;
-}
-
 .hidden {
-    display: none;
+    display: none; /* Скрываем элементы с классом hidden */
 }
 
-.close {
-    cursor: pointer;
-    float: right;
+table.centered {
+    margin:0 auto;
 }
