--- a/templates/authorization/auth.html
+++ b/templates/authorization/auth.html
@@ -13,10 +13,11 @@
 <form method="post">
     {% csrf_token %}
     <table class="centered">
-    {{ form.as_table }}
-</table>
-    <button type="vxod">Войти</button>
-</form>
+        {{ form.as_table }}
+    </table>
+    <button type="submit">Войти</button>
+    </form>
+<button type="button" onclick="window.location.href='/reg/'">Регистрация</button>
 {% if error_message %}
     <p style="color: red;">{{ error_message }}</p>
 {% endif %}
